--- a/proiect/assets/css/style.css
+++ b/proiect/assets/css/style.css
@@ -127,7 +127,6 @@ nav ul li a {
 		color: #ffffff;
 	}
 }
-
 #containerCards .card .cardBody ul {
 	padding-left: 20px;
 	padding-right: 20px;
@@ -162,3 +161,27 @@ nav ul li a {
 	box-shadow: #0095ff 1px 1px 10px;
 }
 /* END CARDS */
+
+/* START CONTACT */
+#contact div {
+	margin: 25px;
+}
+#contact label {
+	width: 100px;
+	display: inline-block;
+}
+#contact select {
+	width: 200px;
+}
+#contact fieldset {
+	display: inline-block;
+	width: 400px;
+	border: 2px solid red;
+}
+/* END CONTACT */
+
+/* START GENERAL */
+.titlu{
+	color:aqua;
+}
+/* END GENERAL */
